# Rust-For-Red-Teamers

./: README.md
basic_dll/: Cargo.toml
basic_dll/src/: lib.rs
enum_object_manager/: Cargo.toml
enum_object_manager/src/: main.rs
get_environment_variables/: Cargo.toml
get_environment_variables/src/: main.rs
get_processes/: Cargo.toml
get_processes/src/: lib.rs  main.rs
messagebox/: Cargo.toml
messagebox/src/: main.rs
