[package]
name = "enum_object_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["impl-default"] }
windows = { version = "0.54.0", features = ["Win32_Foundation"] }
